src/parser/FSharpGrammar/FSharpParser.py
# Generated from FSharpGrammar/FSharpParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FSharpParser ( Parser ):

    grammarFileName = "FSharpParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'rec'", "'public'", 
                     "'private'", "'internal'", "'mutable'", "'let'", "'fun'", 
                     "'while'", "'do'", "'for'", "'to'", "'downto'", "'in'", 
                     "'$'", "'type'", "'module'", "'open'", "'namespace'", 
                     "'class'", "'end'", "'struct'", "'and'", "'interface'", 
                     "'get'", "'inherit'", "'override'", "'default'", "'abstract'", 
                     "'base'", "'async'", "'task'", "'new'", "'then'", "'this'", 
                     "'member'", "'seq'", "'Map'", "'set'", "'raise'", "'reraise'", 
                     "'failwith'", "'invalidArg'", "'val'", "'try'", "'finally'", 
                     "'match'", "'with'", "'use'", "'using'", "'when'", 
                     "'exception'", "'of'", "'.'", "'..'", "'!'", "','", 
                     "';'", "':'", "'<-'", "'|>'", "'_'", "'->'", "'>>'", 
                     "'+'", "'-'", "'*'", "'/'", "'**'", "'%'", "'='", "'<>'", 
                     "'<'", "'>'", "'<='", "'>='", "'&&'", "'||'", "'<<<'", 
                     "'>>>'", "'&&&'", "'|||'", "'^^^'", "'~~~'", "'not'", 
                     "':?'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'\"'", 
                     "'if'", "'elif'", "'else'", "'|'" ]

    symbolicNames = [ "<INVALID>", "WHITE_SPACE", "COMMENT", "INT", "FLOAT", 
                      "INTERPOLATIONSIGN", "CHAR", "STRING", "INTERPOLATED_STRING", 
                      "BOOL", "UNIT", "REC", "PUBLIC", "PRIVATE", "INTERNAL", 
                      "MUTABLE", "LET", "FUN", "WHILE", "DO", "FOR", "TO", 
                      "DOWNTO", "IN", "DOLLAR", "TYPE", "MODULE", "OPEN", 
                      "NAMESPACE", "CLASS", "END", "STRUCT", "WITH_AND", 
                      "INTERFACE", "GET", "INHERIT", "OVERRIDE", "DEFAULT", 
                      "ABSTRACT", "BASE", "ASYNC", "TASK", "NEW", "THEN", 
                      "THIS", "MEMBER", "SEQ", "MAP", "SET", "RAISE", "RERAISE", 
                      "FAILWITH", "INVALIDARG", "VAL", "TRY", "FINALLY", 
                      "MATCH", "WITH", "USE", "USING", "WHEN", "EXCEPTION", 
                      "OF", "DOT", "DOTDOT", "EXCLAMATION_MARK", "COMMA", 
                      "SEMICOLON", "COLON", "ASSIGN", "PIPE", "MISSING_ARG", 
                      "RIGHT_ARROW", "COMPOS", "ADD", "MINUS", "MUL", "DIV", 
                      "POW", "MOD", "EQUAL", "NOT_EQUAL", "LESS", "GREATER", 
                      "LESS_EQUAL", "GREATER_EQUAL", "AND", "OR", "LSHIFT", 
                      "RSHIFT", "LOG_MUL", "LOG_ADD", "LOG_XOR", "LOG_NOT", 
                      "NOT", "COLON_Q", "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACE", 
                      "CLOSE_BRACE", "OPEN_BRACKET", "CLOSE_BRACKET", "DOUBLE_QUOTES", 
                      "IF", "ELIF", "ELSE", "VERTICAL_LINE", "IDENTIFIER", 
                      "SINGLE_CHARACTER" ]

    RULE_dot = 0
    RULE_identifier = 1
    RULE_dotIentifier = 2
    RULE_int = 3
    RULE_float = 4
    RULE_unit = 5
    RULE_bool = 6
    RULE_char = 7
    RULE_underscore = 8
    RULE_interpolationSign = 9
    RULE_dollar = 10
    RULE_string = 11
    RULE_interpolated_string = 12
    RULE_attribute = 13
    RULE_generic = 14
    RULE_round_brackets = 15
    RULE_rec = 16
    RULE_public = 17
    RULE_private = 18
    RULE_internal = 19
    RULE_mutable = 20
    RULE_let_fun = 21
    RULE_let_var = 22
    RULE_fun = 23
    RULE_fun_type = 24
    RULE_typezation = 25
    RULE_if_then_elif_else = 26
    RULE_else_expression = 27
    RULE_elif_expression = 28
    RULE_while_do = 29
    RULE_for = 30
    RULE_add = 31
    RULE_mul = 32
    RULE_div = 33
    RULE_minus = 34
    RULE_pow = 35
    RULE_mod = 36
    RULE_not_equal = 37
    RULE_less = 38
    RULE_less_equal = 39
    RULE_greater = 40
    RULE_greater_equal = 41
    RULE_equal = 42
    RULE_and = 43
    RULE_or = 44
    RULE_lshift = 45
    RULE_rshift = 46
    RULE_log_mul = 47
    RULE_log_add = 48
    RULE_log_xor = 49
    RULE_log_not = 50
    RULE_not = 51
    RULE_pipe = 52
    RULE_compos = 53
    RULE_assign = 54
    RULE_type = 55
    RULE_module = 56
    RULE_open = 57
    RULE_namespace = 58
    RULE_class = 59
    RULE_do = 60
    RULE_new = 61
    RULE_when = 62
    RULE_seq = 63
    RULE_list = 64
    RULE_array = 65
    RULE_map = 66
    RULE_generator = 67
    RULE_set = 68
    RULE_async_rule = 69
    RULE_task = 70
    RULE_exclamation_mark = 71
    RULE_match_with = 72
    RULE_match_case = 73
    RULE_try_with_finally = 74
    RULE_use = 75
    RULE_using = 76
    RULE_raise = 77
    RULE_reraise = 78
    RULE_failwith = 79
    RULE_invalidArg = 80
    RULE_exception_of = 81
    RULE_member = 82
    RULE_val = 83
    RULE_struct = 84
    RULE_with_get_set = 85
    RULE_tuple = 86
    RULE_with = 87
    RULE_record = 88
    RULE_of = 89
    RULE_enum = 90
    RULE_inherit = 91
    RULE_default = 92
    RULE_override = 93
    RULE_abstract = 94
    RULE_base = 95
    RULE_colon_q = 96
    RULE_interface = 97
    RULE_expression = 98
    RULE_exprs = 99

    ruleNames =  [ "dot", "identifier", "dotIentifier", "int", "float", 
                   "unit", "bool", "char", "underscore", "interpolationSign", 
                   "dollar", "string", "interpolated_string", "attribute", 
                   "generic", "round_brackets", "rec", "public", "private", 
                   "internal", "mutable", "let_fun", "let_var", "fun", "fun_type", 
                   "typezation", "if_then_elif_else", "else_expression", 
                   "elif_expression", "while_do", "for", "add", "mul", "div", 
                   "minus", "pow", "mod", "not_equal", "less", "less_equal", 
                   "greater", "greater_equal", "equal", "and", "or", "lshift", 
                   "rshift", "log_mul", "log_add", "log_xor", "log_not", 
                   "not", "pipe", "compos", "assign", "type", "module", 
                   "open", "namespace", "class", "do", "new", "when", "seq", 
                   "list", "array", "map", "generator", "set", "async_rule", 
                   "task", "exclamation_mark", "match_with", "match_case", 
                   "try_with_finally", "use", "using", "raise", "reraise", 
                   "failwith", "invalidArg", "exception_of", "member", "val", 
                   "struct", "with_get_set", "tuple", "with", "record", 
                   "of", "enum", "inherit", "default", "override", "abstract", 
                   "base", "colon_q", "interface", "expression", "exprs" ]

    EOF = Token.EOF
    WHITE_SPACE=1
    COMMENT=2
    INT=3
    FLOAT=4
    INTERPOLATIONSIGN=5
    CHAR=6
    STRING=7
    INTERPOLATED_STRING=8
    BOOL=9
    UNIT=10
    REC=11
    PUBLIC=12
    PRIVATE=13
    INTERNAL=14
    MUTABLE=15
    LET=16
    FUN=17
    WHILE=18
    DO=19
    FOR=20
    TO=21
    DOWNTO=22
    IN=23
    DOLLAR=24
    TYPE=25
    MODULE=26
    OPEN=27
    NAMESPACE=28
    CLASS=29
    END=30
    STRUCT=31
    WITH_AND=32
    INTERFACE=33
    GET=34
    INHERIT=35
    OVERRIDE=36
    DEFAULT=37
    ABSTRACT=38
    BASE=39
    ASYNC=40
    TASK=41
    NEW=42
    THEN=43
    THIS=44
    MEMBER=45
    SEQ=46
    MAP=47
    SET=48
    RAISE=49
    RERAISE=50
    FAILWITH=51
    INVALIDARG=52
    VAL=53
    TRY=54
    FINALLY=55
    MATCH=56
    WITH=57
    USE=58
    USING=59
    WHEN=60
    EXCEPTION=61
    OF=62
    DOT=63
    DOTDOT=64
    EXCLAMATION_MARK=65
    COMMA=66
    SEMICOLON=67
    COLON=68
    ASSIGN=69
    PIPE=70
    MISSING_ARG=71
    RIGHT_ARROW=72
    COMPOS=73
    ADD=74
    MINUS=75
    MUL=76
    DIV=77
    POW=78
    MOD=79
    EQUAL=80
    NOT_EQUAL=81
    LESS=82
    GREATER=83
    LESS_EQUAL=84
    GREATER_EQUAL=85
    AND=86
    OR=87
    LSHIFT=88
    RSHIFT=89
    LOG_MUL=90
    LOG_ADD=91
    LOG_XOR=92
    LOG_NOT=93
    NOT=94
    COLON_Q=95
    OPEN_PAREN=96
    CLOSE_PAREN=97
    OPEN_BRACE=98
    CLOSE_BRACE=99
    OPEN_BRACKET=100
    CLOSE_BRACKET=101
    DOUBLE_QUOTES=102
    IF=103
    ELIF=104
    ELSE=105
    VERTICAL_LINE=106
    IDENTIFIER=107
    SINGLE_CHARACTER=108

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DotContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOT(self):
            return self.getToken(FSharpParser.DOT, 0)

        def getRuleIndex(self):
            return FSharpParser.RULE_dot

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDot" ):
                listener.enterDot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDot" ):
                listener.exitDot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDot" ):
                return visitor.visitDot(self)
            else:
                return visitor.visitChildren(self)




    def dot(self):

        localctx = FSharpParser.DotContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_dot)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 200
            self.match(FSharpParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(FSharpParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return FSharpParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = FSharpParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self.match(FSharpParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DotIentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FSharpParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(FSharpParser.IdentifierContext,i)


        def dot(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FSharpParser.DotContext)
            else:
                return self.getTypedRuleContext(FSharpParser.DotContext,i)


        def getRuleIndex(self):
            return FSharpParser.RULE_dotIentifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDotIentifier" ):
                listener.enterDotIentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDotIentifier" ):
                listener.exitDotIentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDotIentifier" ):
                return visitor.visitDotIentifier(self)
            else:
                return visitor.visitChildren(self)




    def dotIentifier(self):

        localctx = FSharpParser.DotIentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_dotIentifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 204
            self.identifier()
            self.state = 210
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 205
                    self.dot()
                    self.state = 206
                    self.identifier() 
                self.state = 212
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(FSharpParser.INT, 0)

        def getRuleIndex(self):
            return FSharpParser.RULE_int

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt" ):
                listener.enterInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt" ):
                listener.exitInt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt" ):
                return visitor.visitInt(self)
            else:
                return visitor.visitChildren(self)




    def int_(self):

        localctx = FSharpParser.IntContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_int)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 213
            self.match(FSharpParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FloatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(FSharpParser.FLOAT, 0)

        def getRuleIndex(self):
            return FSharpParser.RULE_float

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloat" ):
                listener.enterFloat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloat" ):
                listener.exitFloat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloat" ):
                return visitor.visitFloat(self)
            else:
                return visitor.visitChildren(self)




    def float_(self):

        localctx = FSharpParser.FloatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_float)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 215
            self.match(FSharpParser.FLOAT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNIT(self):
            return self.getToken(FSharpParser.UNIT, 0)

        def getRuleIndex(self):
            return FSharpParser.RULE_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnit" ):
                listener.enterUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnit" ):
                listener.exitUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnit" ):
                return visitor.visitUnit(self)
            else:
                return visitor.visitChildren(self)




    def unit(self):

        localctx = FSharpParser.UnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_unit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 217
            self.match(FSharpParser.UNIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(FSharpParser.BOOL, 0)

        def getRuleIndex(self):
            return FSharpParser.RULE_bool

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool" ):
                listener.enterBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool" ):
                listener.exitBool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBool" ):
                return visitor.visitBool(self)
            else:
                return visitor.visitChildren(self)




    def bool_(self):

        localctx = FSharpParser.BoolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_bool)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 219
            self.match(FSharpParser.BOOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CharContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHAR(self):
            return self.getToken(FSharpParser.CHAR, 0)

        def getRuleIndex(self):
            return FSharpParser.RULE_char

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChar" ):
                listener.enterChar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChar" ):
                listener.exitChar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChar" ):
                return visitor.visitChar(self)
            else:
                return visitor.visitChildren(self)




    def char(self):

        localctx = FSharpParser.CharContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_char)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 221
            self.match(FSharpParser.CHAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnderscoreContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MISSING_ARG(self, i:int=None):
            if i is None:
                return self.getTokens(FSharpParser.MISSING_ARG)
            else:
                return self.getToken(FSharpParser.MISSING_ARG, i)

        def getRuleIndex(self):
            return FSharpParser.RULE_underscore

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnderscore" ):
                listener.enterUnderscore(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnderscore" ):
                listener.exitUnderscore(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnderscore" ):
                return visitor.visitUnderscore(self)
            else:
                return visitor.visitChildren(self)




    def underscore(self):

        localctx = FSharpParser.UnderscoreContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_underscore)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 223
            self.match(FSharpParser.MISSING_ARG)
            self.state = 225
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 224
                self.match(FSharpParser.MISSING_ARG)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InterpolationSignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTERPOLATIONSIGN(self):
            return self.getToken(FSharpParser.INTERPOLATIONSIGN, 0)

        def getRuleIndex(self):
            return FSharpParser.RULE_interpolationSign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterpolationSign" ):
                listener.enterInterpolationSign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterpolationSign" ):
                listener.exitInterpolationSign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterpolationSign" ):
                return visitor.visitInterpolationSign(self)
            else:
                return visitor.visitChildren(self)




    def interpolationSign(self):

        localctx = FSharpParser.InterpolationSignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_interpolationSign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 227
            self.match(FSharpParser.INTERPOLATIONSIGN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DollarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOLLAR(self):
            return self.getToken(FSharpParser.DOLLAR, 0)

        def getRuleIndex(self):
            return FSharpParser.RULE_dollar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDollar" ):
                listener.enterDollar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDollar" ):
                listener.exitDollar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDollar" ):
                return visitor.visitDollar(self)
            else:
                return visitor.visitChildren(self)




    def dollar(self):

        localctx = FSharpParser.DollarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_dollar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 229
            self.match(FSharpParser.DOLLAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(FSharpParser.STRING, 0)

        def getRuleIndex(self):
            return FSharpParser.RULE_string

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)




    def string(self):

        localctx = FSharpParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 231
            self.match(FSharpParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Interpolated_stringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTERPOLATED_STRING(self):
            return self.getToken(FSharpParser.INTERPOLATED_STRING, 0)

        def getRuleIndex(self):
            return FSharpParser.RULE_interpolated_string

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterpolated_string" ):
                listener.enterInterpolated_string(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterpolated_string" ):
                listener.exitInterpolated_string(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterpolated_string" ):
                return visitor.visitInterpolated_string(self)
            else:
                return visitor.visitChildren(self)




    def interpolated_string(self):
